--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">androidexamples35aplication</string>
+    <string name="app_name">AppCrud</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_mostrar">Mostrar</string>
@@ -14,6 +14,7 @@
     <string name="save">Guardar</string>
     <string name="saved">Guardado</string>
     <string name="cadena">Cadena</string>
-    <string name="titulo_cadena">Cadena</string>
+    <string name="titulo_cadena">Nombre</string>
+    <string name="empty_set">Sin contenidos</string>
 
 </resources>
